--- a/src/SerilogDemo.WebApp/Properties/launchSettings.json
+++ b/src/SerilogDemo.WebApp/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:22113",
-      "sslPort": 44332
+      "applicationUrl": "http://localhost:34421",
+      "sslPort": 44351
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SerilogDemo": {
+    "SerilogDemo.WebApp": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
