--- a/src/SerilogDemo.WebApp/appsettings.json
+++ b/src/SerilogDemo.WebApp/appsettings.json
@@ -1,10 +1,26 @@
 {
-  "Logging": {
-    "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Information",
-        "Microsoft.Hosting.Lifetime": "Information"
+    "AllowedHosts": "*",
+    "Serilog": {
+        "Using": [],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "Enrich": [
+            "FromLogContext",
+            "WithMachineName",
+            "WithProcessId",
+            "WithThreadId"
+        ],
+        "WriteTo": [
+            { "Name": "Console" },
+            {
+                "Name": "File",
+                "Args": { "path": "Logs/log.txt" }
+            }
+        ]
     }
-  },
-  "AllowedHosts": "*"
 }
