Added an error log

--- a/src/SerilogDemo.WebApp/appsettings.json
+++ b/src/SerilogDemo.WebApp/appsettings.json
@@ -19,7 +19,9 @@
             { "Name": "Console" },
             {
                 "Name": "File",
-                "Args": { "path": "Logs/log.txt" }
+                "Args": {
+                    "path": "Logs/log.txt",
+                }
             }
         ]
     }
