added json sink

--- a/src/SerilogDemo.WebApp/appsettings.json
+++ b/src/SerilogDemo.WebApp/appsettings.json
@@ -20,7 +20,14 @@
             {
                 "Name": "File",
                 "Args": {
-                    "path": "Logs/log.txt",
+                    "path": "Logs/log.txt"
+                }
+            },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "Logs/log.json",
+                    "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
                 }
             }
         ]
