--- a/src/SerilogDemo.WebApp/appsettings.json
+++ b/src/SerilogDemo.WebApp/appsettings.json
@@ -29,6 +29,12 @@
                     "path": "Logs/log.json",
                     "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
                 }
+            },
+            {
+                "Name": "Seq",
+                "Args": {
+                    "serverUrl": "http://localhost:8081"
+                }
             }
         ]
     }
