--- a/src/SerilogDemo.WebApp/appsettings.json
+++ b/src/SerilogDemo.WebApp/appsettings.json
@@ -20,20 +20,20 @@
             {
                 "Name": "File",
                 "Args": {
-                    "path": "D:\\Logs\\SerilogDemo.WebApp\\log.txt"
+                    "path": "D:\\Logs\\SerilogDemo.WebApp.json.txt"
                 }
             },
             {
                 "Name": "File",
                 "Args": {
-                    "path": "D:\\Logs\\SerilogDemo.WebApp\\log.json",
+                    "path": "D:\\Logs\\SerilogDemo.WebApp.json",
                     "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
                 }
             },
             {
                 "Name": "Seq",
                 "Args": {
-                    "serverUrl": "http://localhost:8082"
+                    "serverUrl": "http://localhost:8081"
                 }
             }
         ]
